--- a/StudyBuddyTest/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/StudyBuddyTest/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -32,7 +32,13 @@
               >Question List</a
             >
           </li>
-          
+
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/favoritesList']"
+              >Favorites List</a
+            >
+          </li>
+
         </ul>
       </div>
     </div>
