--- a/StudyBuddyTest/ClientApp/src/app/question-list/question-list.component.html
+++ b/StudyBuddyTest/ClientApp/src/app/question-list/question-list.component.html
@@ -1,12 +1,12 @@
-<ol>
+<ol class="questionList">
   <li *ngFor="let s of questionList">
-    <p>{{ s.question }}</p>
-    <div class="btn btn-dark" (click)="onSelect(s)">See Answer</div>
+    <p>{{ s.question }}</p> <button class="btn-answer" (click)="onSelect(s)">See Answer</button>
+
   </li>
 </ol>
 
-<div *ngIf="selectedQ">
-<div>Answer: {{ selectedQ.answer }}</div>
+<div class="answer-box" *ngIf="selectedQ">
+ {{ selectedQ.answer }}
 </div>
 
 <app-add-question></app-add-question>
