--- a/StudyBuddyTest/ClientApp/src/styles.css
+++ b/StudyBuddyTest/ClientApp/src/styles.css
@@ -1,16 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: linear-gradient(to right, #57f8e3, #5892ff);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-code {
-  color: #e01a76;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
 }
