fixed answer display

--- a/StudyBuddyTest/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/StudyBuddyTest/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
 <header>
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">StudyBuddyTest</a>
+      <a class="navbar-brand" [routerLink]="['/']">Grand Circus Flash Cards</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -43,4 +43,5 @@
       </div>
     </div>
   </nav>
+
 </header>
